--- a/index.html
+++ b/index.html
@@ -29,15 +29,19 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>resume_builder</title>
+  <title>Augustine Victor</title>
   <link rel="manifest" href="manifest.json">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div class="ring">Loading
+    <span></span>
+  </div>
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '687004793';
+    var serviceWorkerVersion = '2526298693';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
