--- a/index.html
+++ b/index.html
@@ -18,16 +18,16 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="A new Flutter project.">
+  <meta name="description" content="My name is Augustine Victor, I am a flutter mobile developer.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="resume_builder">
+  <meta name="apple-mobile-web-app-title" content="Augustine Victor">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png"/>
+  <link rel="icon" type="image/png" href="favicon.ico"/>
 
   <title>Augustine Victor</title>
   <link rel="manifest" href="manifest.json">
@@ -41,7 +41,7 @@
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
   <script>
-    var serviceWorkerVersion = '2526298693';
+    var serviceWorkerVersion = '70764839';
     var scriptLoaded = false;
     function loadMainDartJs() {
       if (scriptLoaded) {
